DATAMONGO-2598 - Wording changes.
Removed the language of oppression and violence
and replaced it with more neutral language.

Note that problematic words in the code have
to remain in the docs until the code changes.

Original pull request: #872.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -44,7 +44,7 @@
 [[new-features.2-1-0]]
 == What's New in Spring Data MongoDB 2.1
 
-* Cursor-based aggregation execution.
+* Cursor-based aggregation.
 * <<mongo-template.query.distinct,Distinct queries>> for imperative and reactive Template APIs.
 * Support for Map/Reduce through the reactive Template API.
 * <<mongo.mongo-3.validation,`validator` support for collections>>.
