DATAMONGO-1894 - Introduce cached ExpressionParser.
Original Pull Request: #874

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -5,6 +5,7 @@
 == What's New in Spring Data MongoDB 3.1
 
 * <<mongo.auditing,Reactive auditing>> enabled through `@EnableReactiveMongoAuditing`. `@EnableMongoAuditing` no longer registers `ReactiveAuditingEntityCallback`.
+* Reactive SpEL support in `@Query` and `@Aggregation` query methods.
 
 [[new-features.3.0]]
 == What's New in Spring Data MongoDB 3.0
