--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.2.9.RELEASE (2020-07-22)
+---------------------------------------------
+* DATAMONGO-2572 - Remove usage of Oppressive Language.
+* DATAMONGO-2571 - regex expression included "/" character can't be parsed in the stage of aggregation annotation.
+* DATAMONGO-2570 - Avoiding unintentional unboxing.
+* DATAMONGO-2567 - Release 2.2.9 (Moore SR9).
+* DATAMONGO-2490 - @DBRef fetched without ClientSession when using Spring Transactions.
+
+
 Changes in version 2.1.19.RELEASE (2020-07-22)
 ----------------------------------------------
 * DATAMONGO-2572 - Remove usage of Oppressive Language.
@@ -3062,6 +3071,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
