--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.0.4.RELEASE (2020-09-16)
+---------------------------------------------
+* DATAMONGO-2618 - ReplaceRootDocumentOperation not visible.
+* DATAMONGO-2613 - ArrayJsonSchemaObject incorrectly mapped to Document.
+* DATAMONGO-2609 - Release 3.0.4 (Neumann SR4).
+
+
 Changes in version 2.2.10.RELEASE (2020-09-16)
 ----------------------------------------------
 * DATAMONGO-2618 - ReplaceRootDocumentOperation not visible.
@@ -3131,6 +3138,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
