DATAMONGO-2623 - Add support for $function and $accumulator aggregation operators.
Original pull request: #887.

--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -8,6 +8,7 @@
 * Reactive SpEL support in `@Query` and `@Aggregation` query methods.
 * Aggregation hints via `AggregationOptions.builder().hint(bson).build()`.
 * Extension Function `KProperty.asPath()` to render property references into a property path representation.
+* Server-side JavaScript aggregation expressions `$function` and `$accumulator` via `ScriptOperators`.
 
 [[new-features.3.0]]
 == What's New in Spring Data MongoDB 3.0
