--- a/src/main/asciidoc/new-features.adoc
+++ b/src/main/asciidoc/new-features.adoc
@@ -7,6 +7,7 @@
 * <<mongo.auditing,Reactive auditing>> enabled through `@EnableReactiveMongoAuditing`. `@EnableMongoAuditing` no longer registers `ReactiveAuditingEntityCallback`.
 * Reactive SpEL support in `@Query` and `@Aggregation` query methods.
 * Aggregation hints via `AggregationOptions.builder().hint(bson).build()`.
+* Extension Function `KProperty.asPath()` to render property references into a property path representation.
 
 [[new-features.3.0]]
 == What's New in Spring Data MongoDB 3.0
