--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.1.21.RELEASE (2020-10-28)
+----------------------------------------------
+* DATAMONGO-2641 - Release 2.1.21 (Lovelace SR21).
+
+
 Changes in version 3.1.0-RC2 (2020-10-14)
 -----------------------------------------
 * DATAMONGO-2633 - @Query annotation does not support $centerSphere.
@@ -3148,6 +3153,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
