--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.2.11.RELEASE (2020-10-28)
+----------------------------------------------
+* DATAMONGO-2638 - Fix documentation issues.
+* DATAMONGO-2633 - @Query annotation does not support $centerSphere.
+* DATAMONGO-2624 - Release 2.2.11 (Moore SR11).
+
+
 Changes in version 2.1.21.RELEASE (2020-10-28)
 ----------------------------------------------
 * DATAMONGO-2641 - Release 2.1.21 (Lovelace SR21).
@@ -3162,6 +3169,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
