--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,14 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.0.6.RELEASE (2020-12-09)
+---------------------------------------------
+* DATAMONGO-2663 - Document Spring Data to MongoDB compatibility.
+* DATAMONGO-2661 - Handle nullable types for KPropertyPath.
+* DATAMONGO-2647 - Release 3.0.6 (Neumann SR6).
+* DATAMONGO-2644 - Invalid reference '_id'! Error In spring data mongodb.
+
+
 Changes in version 2.2.12.RELEASE (2020-12-09)
 ----------------------------------------------
 * DATAMONGO-2663 - Document Spring Data to MongoDB compatibility.
@@ -3197,6 +3205,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
