--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,14 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.1.3 (2021-01-13)
+-------------------------------------
+* DATAMONGO-2671 - DateFromParts millisecondsOf returns "milliseconds" as $dateFromParts function but it should be millisecond.
+* DATAMONGO-2665 - Update CI jobs with Docker Login.
+* #3534 - Update copyright year to 2021.
+* #3529 - Update repository after GitHub issues migration.
+
+
 Changes in version 3.1.2 (2020-12-09)
 -------------------------------------
 * DATAMONGO-2663 - Document Spring Data to MongoDB compatibility.
@@ -3214,6 +3222,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
