--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,16 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.2.0-M2 (2021-01-13)
+----------------------------------------
+* DATAMONGO-2671 - DateFromParts millisecondsOf returns "milliseconds" as $dateFromParts function but it should be millisecond.
+* DATAMONGO-2665 - Update CI jobs with Docker Login.
+* DATAMONGO-2651 - Allow AggregationExpression as part of group operation.
+* #3534 - Update copyright year to 2021.
+* #3529 - Update repository after GitHub issues migration.
+* #3515 - Deprecate KPropertyPath in favor of Spring Data Common's KPropertyPath [DATAMONGO-2662].
+
+
 Changes in version 3.1.3 (2021-01-13)
 -------------------------------------
 * DATAMONGO-2671 - DateFromParts millisecondsOf returns "milliseconds" as $dateFromParts function but it should be millisecond.
@@ -3222,6 +3232,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
