--- a/src/main/asciidoc/reference/query-by-example.adoc
+++ b/src/main/asciidoc/reference/query-by-example.adoc
@@ -97,3 +97,10 @@ Query query = new Query(new Criteria().alike(example));
 List<Person> result = template.find(query, Person.class);
 ----
 ====
+
+[NOTE]
+====
+`UntypedExampleMatcher` is likely the right choice for you if you are storing different entities within a single collection or opted out of writing <<mongo-template.type-mapping,type hints>>.
+
+Also, keep in mind that using `@TypeAlias` requires eager initialization of the `MappingContext`. To do so, configure `initialEntitySet` to to ensure proper alias resolution for read operations.
+====
