--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,14 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 2.2.13.RELEASE (2021-02-17)
+----------------------------------------------
+* #3544 - alike Criteria can't add andOperator.
+* #3534 - Update copyright year to 2021.
+* #3529 - Update repository after GitHub issues migration.
+* #3525 - Bug in full text query documentation [DATAMONGO-2673].
+
+
 Changes in version 3.2.0-M2 (2021-01-13)
 ----------------------------------------
 * DATAMONGO-2671 - DateFromParts millisecondsOf returns "milliseconds" as $dateFromParts function but it should be millisecond.
@@ -3232,6 +3240,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
