--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,18 @@
 Spring Data MongoDB Changelog
 =============================
 
+Changes in version 3.0.7.RELEASE (2021-02-17)
+---------------------------------------------
+* DATAMONGO-2671 - DateFromParts millisecondsOf returns "milliseconds" as $dateFromParts function but it should be millisecond.
+* DATAMONGO-2665 - Update CI jobs with Docker Login.
+* #3544 - alike Criteria can't add andOperator.
+* #3534 - Update copyright year to 2021.
+* #3529 - Update repository after GitHub issues migration.
+* #3525 - Bug in full text query documentation [DATAMONGO-2673].
+* #3517 - GeoJson: Improper Deserialization of Document with a GeoJsonPolygon [DATAMONGO-2664].
+* #3474 - Search by alike() criteria is broken when type alias information is not available [DATAMONGO-2620].
+
+
 Changes in version 2.2.13.RELEASE (2021-02-17)
 ----------------------------------------------
 * #3544 - alike Criteria can't add andOperator.
@@ -3240,6 +3252,7 @@ Repository
 * Automatic implementation of interface query method names on repositories.
 * Namespace support for Mongo repositories
 * Allow usage of pagination and sorting with repositories
+
 
 
 
